z-index fix

--- a/main.css
+++ b/main.css
@@ -20,10 +20,10 @@ body {
 .form {
 	max-width: 50%;
 	flex: 1;
+	z-index: 2;
 }
 
 #map {
-	z-index: -1;
 	position: absolute;
 	top: 0;
 	bottom: 0;
